--- a/GigOficial3/GigOficial3/GigOficial3.csproj
+++ b/GigOficial3/GigOficial3/GigOficial3.csproj
@@ -203,6 +203,10 @@
     <Compile Include="Migrations\201710250423589_CreateGigTable.Designer.cs">
       <DependentUpon>201710250423589_CreateGigTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710260407576_OverRRideConventionsGigsAndGenres.cs" />
+    <Compile Include="Migrations\201710260407576_OverRRideConventionsGigsAndGenres.Designer.cs">
+      <DependentUpon>201710260407576_OverRRideConventionsGigsAndGenres.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -293,6 +297,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201710250423589_CreateGigTable.resx">
       <DependentUpon>201710250423589_CreateGigTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710260407576_OverRRideConventionsGigsAndGenres.resx">
+      <DependentUpon>201710260407576_OverRRideConventionsGigsAndGenres.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
