Populate Genres Table

--- a/GigOficial3/GigOficial3/GigOficial3.csproj
+++ b/GigOficial3/GigOficial3/GigOficial3.csproj
@@ -207,6 +207,10 @@
     <Compile Include="Migrations\201710260407576_OverRRideConventionsGigsAndGenres.Designer.cs">
       <DependentUpon>201710260407576_OverRRideConventionsGigsAndGenres.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710260443315_PopulateGenresTable.cs" />
+    <Compile Include="Migrations\201710260443315_PopulateGenresTable.Designer.cs">
+      <DependentUpon>201710260443315_PopulateGenresTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -300,6 +304,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201710260407576_OverRRideConventionsGigsAndGenres.resx">
       <DependentUpon>201710260407576_OverRRideConventionsGigsAndGenres.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710260443315_PopulateGenresTable.resx">
+      <DependentUpon>201710260443315_PopulateGenresTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
